fill stylus file

--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -1,3 +1,13 @@
 .sonar__statistic
+  &__container
+    display : flex 
+    flex-direction: column
+
   &__line
+    flex-grow : 1
+    margin : 0.5vmin
     display : flex
+    justify-content : space-around
+
+  &__stat
+    width : 15vmin
