--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -1,7 +1,7 @@
 .sonar__statistic
   &__container
     display : flex 
-    flex-direction: column
+    flex-direction : column
 
   &__line
     flex-grow : 1
@@ -11,3 +11,4 @@
 
   &__stat
     width : 15vmin
+    overflow : hidden
