start format sonar

--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -2,10 +2,14 @@
   &__container
     display : flex 
     flex-direction : column
+    justify-content : center
 
   &__line
     flex-grow : 1
     margin : 0.5vmin
+    height: 11vh
+    min-height: 11vh
+    max-height: 11vh
     display : flex
     justify-content : space-around
 
