--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -16,3 +16,19 @@
   &__stat
     width : 15vmin
     overflow : hidden
+
+  &__name
+    text-align: center
+
+  &__content
+    display: flex
+    justify-content: center
+    align-items: last baseline
+  
+  &__value
+    font-size: 4vmin
+    margin: 2vmin 1vmin
+  
+  &__informations
+    display: flex
+    flex-direction: column-reverse
