prepare to onclick

--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -16,6 +16,17 @@
   &__stat
     width : 15vmin
     overflow : hidden
+    cursor pointer
+
+  &__stat:hover
+    background-color #535c68
+    border-radius 1em
+  
+  &__stat:active
+    box-shadow 0 0.2em 0 rgba(0,0,0,0.4) inset
+  
+  &__stat:active
+    box-shadow 0 0.2em 0 rgba(0,0,0,0.4) inset
 
   &__name
     text-align: center
