change wrap error message and style

--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -1,21 +1,21 @@
 .sonar__statistic
   &__container
-    display : flex 
-    flex-direction : column
-    justify-content : center
+    display flex 
+    flex-direction column
+    justify-content center
 
   &__line
-    flex-grow : 1
-    margin : 0.5vmin
-    height: 11vh
-    min-height: 11vh
-    max-height: 11vh
-    display : flex
-    justify-content : space-around
+    flex-grow 1
+    margin 0.5vmin
+    height 11vh
+    min-height 11vh
+    max-height 11vh
+    display flex
+    justify-content space-around
 
   &__stat
-    width : 15vmin
-    overflow : hidden
+    width 15vmin
+    overflow hidden
     cursor pointer
 
   &__stat:hover
@@ -29,21 +29,23 @@
     box-shadow 0 0.2em 0 rgba(0,0,0,0.4) inset
 
   &__name
-    text-align: center
+    text-align center
 
   &__content
-    display: flex
-    justify-content: center
-    align-items: last baseline
+    display flex
+    justify-content center
+    align-items last baseline
   
   &__value
-    font-size: 4vmin
-    margin: 2vmin 1vmin
+    font-size 4vmin
+    margin 2vmin 1vmin
   
   &__informations
-    display: flex
-    flex-direction: column-reverse
+    display flex
+    flex-direction column-reverse
 
-  &__evolution {
-    align-self: end
-}
+  &__evolution
+    align-self end
+
+  &__error
+    text-align center
