--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -48,4 +48,8 @@
     align-self end
 
   &__error
-    text-align center
+    display flex
+    justify-content center
+    align-items center
+    height 100%
+    font-size 1.5em
