--- a/styl/_statistic.styl
+++ b/styl/_statistic.styl
@@ -47,9 +47,11 @@
   &__evolution
     align-self end
 
-  &__error
+  &__center
     display flex
     justify-content center
     align-items center
     height 100%
+  
+  &__error
     font-size 1.5em
